@@ -2,6 +2,8 @@
 v3.0-git
 --------
 
+[jan] Send a subscription link with the notification about shared
+      calendars if necessary.
 [jan] Default calendars no longer have the user name as the ID.
 [jan] Create a default calendar if the user doesn't own any yet.
 [jan] Add CalDAV client support (Request #8525).
